# gold1024

./: .gitignore  .markdownlint.json  QUICKSTART.md  README.md  UV_SETUP.md  chart_renderer.py  data_fetcher.py  database_manager.py  init_files.py  main_app.py  pyproject.toml  pyrightconfig.json  readme_complete.md  requirements.txt  run_app.bat  run_app.ps1  scenario_parser.py  setup_project.py  unit_tests.py  verification_notebook.py  全体サマリー.md
.github/workflows/: ci.yml  docs.yml  release.yml
